force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/DESKSCMT__Desk_Case_Migration__c.object-meta.xml
<CustomObject>
    <label>Desk Case Migration</label>
    <nameField>
        <displayFormat>DCM-{0000000000}</displayFormat>
        <label>Desk Case Migration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Desk Case Migrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>