force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/active_at__c.field-meta.xml
<CustomField>
    <fullName>active_at__c</fullName>
    <label>Active At</label>
    <type>DateTime</type>
</CustomField>