force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/changed_at__c.field-meta.xml
<CustomField>
    <fullName>changed_at__c</fullName>
    <label>Changed At</label>
    <type>DateTime</type>
</CustomField>