force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__Blurb__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Blurb__c</fullName>
    <label>Blurb</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>