force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__CaseId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__CaseId__c</fullName>
    <label>CaseId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>