force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__ClosedDate_for_audit__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__ClosedDate_for_audit__c</fullName>
    <label>ClosedDate For Audit</label>
    <length>20</length>
    <type>Text</type>
</CustomField>