force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__ContactId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__ContactId__c</fullName>
    <label>ContactId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>