force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__Description__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Description__c</fullName>
    <description>null</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>