force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__Desk_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Desk_Customer_Id__c</fullName>
    <label>Desk Customer Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>