force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__Labels__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Labels__c</fullName>
    <description>null</description>
    <label>Labels</label>
    <type>TextArea</type>
</CustomField>