force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__OwnerId__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__OwnerId__c</fullName>
    <label>OwnerId</label>
    <length>28</length>
    <type>Text</type>
</CustomField>