force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__Priority__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Priority__c</fullName>
    <description>null</description>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>