force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/DESKSCMT__Subject__c.field-meta.xml
<CustomField>
    <fullName>DESKSCMT__Subject__c</fullName>
    <description>null</description>
    <label>Subject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>