force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/ERP_Area__c.field-meta.xml
<CustomField>
    <fullName>ERP_Area__c</fullName>
    <label>Område i Xledger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--</fullName>
            </value>
            <value>
                <fullName>Hjem</fullName>
            </value>
            <value>
                <fullName>XRM</fullName>
            </value>
            <value>
                <fullName>Fakturering</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Regnskap</fullName>
            </value>
            <value>
                <fullName>Prosjekt</fullName>
            </value>
            <value>
                <fullName>Kunde/Leverandør</fullName>
            </value>
            <value>
                <fullName>Lønn/reise</fullName>
            </value>
            <value>
                <fullName>Økonomi</fullName>
            </value>
            <value>
                <fullName>Forsystem/filimport</fullName>
            </value>
            <value>
                <fullName>Innkjøp</fullName>
            </value>
            <value>
                <fullName>Administrasjon/brukere</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Integrasjoner</fullName>
            </value>
            <value>
                <fullName>Annet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>