force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/first_resolved_at__c.field-meta.xml
<CustomField>
    <fullName>first_resolved_at__c</fullName>
    <label>First Resolved At</label>
    <type>DateTime</type>
</CustomField>