force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>