force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>chat</fullName>
            </value>
            <value>
                <fullName>twitter</fullName>
            </value>
            <value>
                <fullName>email</fullName>
            </value>
            <value>
                <fullName>qna</fullName>
            </value>
            <value>
                <fullName>facebook</fullName>
            </value>
            <value>
                <fullName>phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>