force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/fields/received_at__c.field-meta.xml
<CustomField>
    <fullName>received_at__c</fullName>
    <label>Received At</label>
    <type>DateTime</type>
</CustomField>