force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/listViews/DESKSCMT__All.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__All</fullName>
    <columns>NAME</columns>
    <columns>DESKSCMT__Error__c</columns>
    <columns>DESKSCMT__Subject__c</columns>
    <columns>DESKSCMT__Status__c</columns>
    <columns>DESKSCMT__Desk_Case_Id__c</columns>
    <columns>DESKSCMT__Desk_Customer_Id__c</columns>
    <columns>DESKSCMT__Assigned_Group_Id__c</columns>
    <columns>DESKSCMT__Assigned_User_Id__c</columns>
    <columns>DESKSCMT__Priority__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>