force-app/main/default/objects/DESKSCMT__Desk_Case_Migration__c/listViews/DESKSCMT__Failed_Cases.listView-meta.xml
<ListView>
    <fullName>DESKSCMT__Failed_Cases</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>DESKSCMT__Desk_Case_Id__c</columns>
    <columns>DESKSCMT__Error__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DESKSCMT__Error__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Failed Cases</label>
</ListView>